--- a/assect/css/style.css
+++ b/assect/css/style.css
@@ -47,6 +47,10 @@ body {
     justify-content: space-around;
 }
 
+.slogan{
+    color: rgba(255, 255, 255, 0.66);
+}
+
 .custom-nav .active {
     color: red !important;
     font-weight: 800 !important;
@@ -172,9 +176,9 @@ main .home-con .bg-animation .illution {
 
 .home-con .info-con .social-con {
     /* border: 2px solid red; */
-    width: 300px;
-    height: 50px;
-    margin-top: 20px;
+    width: 400px;
+    height: 30px;
+    margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
